force-app/main/default/objects/Collection__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demand__c</fullName>
        <label>Demand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visits__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Demand__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Collection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>