force-app/main/default/objects/Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Collection_Date__c</columns>
    <columns>Demand__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>